fix: No ver puntero y scrollbar horizontal

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,14 +38,20 @@
 /* Generales */
 html {
     scroll-behavior: smooth;
+    cursor: none;
+    overflow-x: hidden;
 }
 body{
     scrollbar-color: rgba(0, 0, 0, .5) rgba(0, 0, 0, 0);
-    scrollbar-width: thin;
+    scrollbar-width: none;
+    cursor: none;
+    overflow-x: hidden;
 }
 main{
     scrollbar-color: rgba(0, 0, 0, .5) rgba(0, 0, 0, 0);
-    scrollbar-width: thin;
+    scrollbar-width: none;
+    cursor: none;
+    overflow-x: hidden;
 }
 
 .contacto_link{
